{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 23,
  "lineage": "3da41dbd-fa0b-f144-5593-4b2e1d6f8bd8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.227.189.46",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-09-27T05:52:39.137-07:00",
            "id": "projects/coalfiretest/regions/us-west1/addresses/coalfire-test-nap-ip",
            "name": "coalfire-test-nap-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "coalfiretest",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/addresses/coalfire-test-nap-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/coalfiretest/zones/us-west1-b/instanceGroups/coalfire-test-vm-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 100,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-09-27T05:53:57.902-07:00",
            "enable_cdn": false,
            "fingerprint": "xD-oI6CeGIg=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/healthChecks/coalfire-test-healthcheck"
            ],
            "id": "projects/coalfiretest/global/backendServices/coalfire-test-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "coalfire-test-backend-service",
            "port_name": "http",
            "project": "coalfiretest",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/backendServices/coalfire-test-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-27T05:53:00.777-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-http",
            "log_config": [],
            "name": "coalfire-test-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "priority": 1000,
            "project": "coalfiretest",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-27T05:53:00.772-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-https",
            "log_config": [],
            "name": "coalfire-test-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "priority": 1000,
            "project": "coalfiretest",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-09-27T05:53:00.813-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-internal",
            "log_config": [],
            "name": "coalfire-test-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "priority": 1000,
            "project": "coalfiretest",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-internal",
            "source_ranges": [
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-27T05:53:00.776-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-rdp",
            "log_config": [],
            "name": "coalfire-test-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "priority": 1000,
            "project": "coalfiretest",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-27T05:53:00.869-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-ssh",
            "log_config": [],
            "name": "coalfire-test-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "priority": 1000,
            "project": "coalfiretest",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/firewalls/coalfire-test-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/coalfiretest/global/forwardingRules/coalfire-test-global-forwarding-rule",
            "ip_address": "34.107.226.36",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "coalfire-test-global-forwarding-rule",
            "port_range": "80",
            "project": "coalfiretest",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/forwardingRules/coalfire-test-global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/targetHttpProxies/coalfire-test-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_3",
            "google_compute_target_http_proxy.target_http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20210916",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coalfiretest/zones/us-west1-b/disks/coalfire-test-vm-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/coalfiretest/zones/us-west1-b/instances/coalfire-test-vm-server",
            "instance_id": "9088664015789097003",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata_fingerprint": "fJuyuMacEFg=",
            "name": "coalfire-test-vm-server",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
                "network_ip": "10.0.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-public-subnet-1",
                "subnetwork_project": "coalfiretest"
              }
            ],
            "project": "coalfiretest",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/zones/us-west1-b/instances/coalfire-test-vm-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/coalfiretest/global/networks/coalfire-test-vpc",
            "mtu": 0,
            "name": "coalfire-test-vpc",
            "project": "coalfiretest",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-27T05:53:00.857-07:00",
            "id": "projects/coalfiretest/regions/us-west1/routers/coalfire-test-nat-router",
            "name": "coalfire-test-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "project": "coalfiretest",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/routers/coalfire-test-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "coalfiretest/us-west1/coalfire-test-nat-router/coalfire-nat-gateway",
            "min_ports_per_vm": 0,
            "name": "coalfire-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/addresses/coalfire-test-nap-ip"
            ],
            "project": "coalfiretest",
            "router": "coalfire-test-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_ip",
            "google_compute_network.vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-27T05:53:01.275-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-private-subnet-3",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "coalfire-test-private-subnet-3",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coalfiretest",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-private-subnet-3"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-27T05:53:01.465-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-private-subnet-4",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "coalfire-test-private-subnet-4",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coalfiretest",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-private-subnet-4"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-27T05:53:01.036-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-public-subnet-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "coalfire-test-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coalfiretest",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-27T05:53:02.088-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-public-subnet-2",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "coalfire-test-public-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/networks/coalfire-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "coalfiretest",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/regions/us-west1/subnetworks/coalfire-test-public-subnet-2"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-27T05:54:30.804-07:00",
            "id": "projects/coalfiretest/global/targetHttpProxies/coalfire-test-proxy",
            "name": "coalfire-test-proxy",
            "project": "coalfiretest",
            "proxy_bind": false,
            "proxy_id": 538940247644045801,
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/targetHttpProxies/coalfire-test-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/urlMaps/coalfire-test-load-balancer"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_3",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-27T05:54:19.574-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/backendServices/coalfire-test-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "zWqcJGQf2L4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/coalfiretest/global/urlMaps/coalfire-test-load-balancer",
            "map_id": 3985061142249340948,
            "name": "coalfire-test-load-balancer",
            "path_matcher": [],
            "project": "coalfiretest",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coalfiretest/global/urlMaps/coalfire-test-load-balancer",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance_group_manager.web_private_group",
            "google_compute_instance_template.web_server",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_3"
          ]
        }
      ]
    }
  ]
}